@@ -42,47 +42,50 @@
 #define ZIPFLAG_AUTOCASE 4
 
 enum {
- ZIP_LOCAL_HEADER_SIZE = 30,
- ZIP_FILE_HEADER_SIZE = 46,
- ZIP_DIRECTORY_INFO_SIZE = 22,
+  ZIP_LOCAL_HEADER_SIZE = 30,
+  ZIP_FILE_HEADER_SIZE = 46,
+  ZIP_DIRECTORY_INFO_SIZE = 22,
 };
 
 /* Local file header */
 typedef struct zip_local_header {
-    libspectrum_dword magic;                /* local file header signature     4 bytes (0x04034b50) */
-    libspectrum_word required_version;      /* version needed to extract       2 bytes */
-    libspectrum_word flags;                 /* general purpose bit flag        2 bytes */
-    libspectrum_word compression;           /* compression method              2 bytes */
-    libspectrum_word mod_time;              /* last mod file time              2 bytes */
-    libspectrum_word mod_date;              /* last mod file date              2 bytes */
-    libspectrum_dword crc;                  /* crc-32                          4 bytes */
-    libspectrum_dword compressed_size;      /* compressed size                 4 bytes */
-    libspectrum_dword uncompressed_size;    /* uncompressed size               4 bytes */
-    libspectrum_word name_size;             /* file name length                2 bytes */
-    libspectrum_word extra_field_size;      /* extra field length              2 bytes */
+    libspectrum_dword magic;             /* local file header signature       */
+                                         /*   4 bytes (0x04034b50)            */
+    libspectrum_word required_version;   /* version needed to extract 2 bytes */
+    libspectrum_word flags;              /* general purpose bit flag  2 bytes */
+    libspectrum_word compression;        /* compression method        2 bytes */
+    libspectrum_word mod_time;           /* last mod file time        2 bytes */
+    libspectrum_word mod_date;           /* last mod file date        2 bytes */
+    libspectrum_dword crc;               /* crc-32                    4 bytes */
+    libspectrum_dword compressed_size;   /* compressed size           4 bytes */
+    libspectrum_dword uncompressed_size; /* uncompressed size         4 bytes */
+    libspectrum_word name_size;          /* file name length          2 bytes */
+    libspectrum_word extra_field_size;   /* extra field length        2 bytes */
  /* libspectrum_byte name[ name_size ]; */
  /* libspectrum_byte extra_field[ extra_field_size ]; */
 } zip_local_header;
 
 /* Central directory file header */
 typedef struct zip_file_header {
-    libspectrum_dword magic;                /* central file header signature   4 bytes (0x02014b50) */
-    libspectrum_word creator_version;       /* version made by                 2 bytes */
-    libspectrum_word required_version;      /* version needed to extract       2 bytes */
-    libspectrum_word flags;                 /* general purpose bit flag        2 bytes */
-    libspectrum_word compression;           /* compression method              2 bytes */
-    libspectrum_word mod_time;              /* last mod file time              2 bytes */
-    libspectrum_word mod_date;              /* last mod file date              2 bytes */
-    libspectrum_dword crc;                  /* crc-32                          4 bytes */
-    libspectrum_dword compressed_size;      /* compressed size                 4 bytes */
-    libspectrum_dword uncompressed_size;    /* uncompressed size               4 bytes */
-    libspectrum_word name_size;             /* file name length                2 bytes */
-    libspectrum_word extra_field_size;      /* extra field length              2 bytes */
-    libspectrum_word comment_size;          /* file comment length             2 bytes */
-    libspectrum_word disk_index;            /* disk number start               2 bytes */
-    libspectrum_word internal_flags;        /* internal file attributes        2 bytes */
-    libspectrum_dword external_flags;       /* external file attributes        4 bytes */
-    libspectrum_signed_dword file_offset;   /* relative offset of local header 4 bytes */
+    libspectrum_dword magic;              /* central file header signature    */
+                                          /*   4 bytes (0x02014b50)           */
+    libspectrum_word creator_version;     /* version made by          2 bytes */
+    libspectrum_word required_version;    /* version needed to extract        */
+                                          /*   2 bytes */
+    libspectrum_word flags;               /* general purpose bit flag 2 bytes */
+    libspectrum_word compression;         /* compression method       2 bytes */
+    libspectrum_word mod_time;            /* last mod file time       2 bytes */
+    libspectrum_word mod_date;            /* last mod file date       2 bytes */
+    libspectrum_dword crc;                /* crc-32                   4 bytes */
+    libspectrum_dword compressed_size;    /* compressed size          4 bytes */
+    libspectrum_dword uncompressed_size;  /* uncompressed size        4 bytes */
+    libspectrum_word name_size;           /* file name length         2 bytes */
+    libspectrum_word extra_field_size;    /* extra field length       2 bytes */
+    libspectrum_word comment_size;        /* file comment length      2 bytes */
+    libspectrum_word disk_index;          /* disk number start        2 bytes */
+    libspectrum_word internal_flags;      /* internal file attributes 2 bytes */
+    libspectrum_dword external_flags;     /* external file attributes 4 bytes */
+    libspectrum_signed_dword file_offset; /* relative offset of local header 4 bytes */
  /* libspectrum_byte name[ name_size ]; */
  /* libspectrum_byte extra_field[ extra_field_size ]; */
  /* libspectrum_byte comment[ comment_size ]; */
@@ -90,14 +93,27 @@ typedef struct zip_file_header {
 
 /* End of central directory record */
 typedef struct zip_directory_info {
-    libspectrum_dword magic;                /* end of central dir signature    4 bytes (0x06054b50) */
-    libspectrum_word disk_index;            /* number of this disk             2 bytes */
-    libspectrum_word directory_disk_index;  /* number of the disk with the start of the central directory     2 bytes */
-    libspectrum_word disk_file_count;       /* total number of entries in the central directory on this disk  2 bytes */
-    libspectrum_word file_count;            /* total number of entries in the central directory               2 bytes */
-    libspectrum_dword directory_size;       /* size of the central directory   4 bytes */
-    libspectrum_dword directory_offset;     /* offset of start of central directory with respect to the starting disk number  4 bytes */
-    libspectrum_word comment_size;          /* .ZIP file comment length        2 bytes */
+    libspectrum_dword magic;               /* end of central dir signature    */
+                                           /*   4 bytes (0x06054b50)          */
+    libspectrum_word disk_index;           /* number of this disk             */
+                                           /*   2 bytes                       */
+    libspectrum_word directory_disk_index; /* number of the disk with the     */
+                                           /* start of the central directory  */
+                                           /*   2 bytes                       */
+    libspectrum_word disk_file_count;      /* total number of entries in the  */
+                                           /* central directory on this disk  */
+                                           /*   2 bytes                       */
+    libspectrum_word file_count;           /* total number of entries in the  */
+                                           /* central directory               */
+                                           /*   2 bytes                       */
+    libspectrum_dword directory_size;      /* size of the central directory   */
+                                           /*   4 bytes                       */
+    libspectrum_dword directory_offset;    /* offset of start of central      */
+                                           /* directory with respect to the   */
+                                           /* starting disk number            */
+                                           /*   4 bytes                       */
+    libspectrum_word comment_size;         /* .ZIP file comment length        */
+                                           /*   2 bytes                       */
  /* libspectrum_byte comment[ comment_size ]; */
 } zip_directory_info;
 
@@ -109,7 +125,7 @@ typedef struct zip_stat {
   libspectrum_word index;
 } zip_stat;
 
-struct libspectrum_zip {
+typedef struct libspectrum_zip {
 
   /* State of the parsing process */  
   libspectrum_dword state;
@@ -139,7 +155,7 @@ struct libspectrum_zip {
   zip_file_header file_info;
   char file_name[1024];
   int file_ignore_case;
-};
+} libspectrum_zip;
 
 struct libspectrum_zip *
 libspectrum_zip_open( const libspectrum_byte *buffer, size_t length );
